--- a/src/app/components/post/postcard/postcard.component.css
+++ b/src/app/components/post/postcard/postcard.component.css
@@ -10,6 +10,147 @@
 .post-card-footer a {
   color: #0000007d;
 }
+.card{
+  width: 100%;
+}
 .post-active{
   color: cornflowerblue !important;
+}
+.fileContainer {
+  color: #d8d8d8;
+  font-size: 11px;
+  margin: 0 0 0 5px;
+  position: relative;
+  text-transform: capitalize;
+}
+.fileContainer [type=file], .fileContainer [type=checkbox] {
+  cursor: pointer;
+  display: block;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  position: absolute;
+  right: 0px;
+  text-align: right;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+}
+.new-postbox {
+  display: inline-block;
+  width: 100%;
+}
+.new-postbox > figure {
+  display: inline-block;
+  margin-bottom: 0;
+  vertical-align: top;
+  width: 10.4%;
+}
+
+.newpst-input {
+  display: inline-block;
+  margin-left: 10px;
+  vertical-align: top;
+  width: 100%;
+}
+
+.newpst-input > form {
+  display: inline-block;
+  width: 100%;
+}
+.newpst-input textarea {
+  float: left;
+  width: 100%;
+}
+.attachments {
+  border: 1px solid #eee;
+  display: block;
+  padding: 10px;
+  text-align: right;
+  border-top: 0;
+  background: #fff;
+}
+
+.attachments > ul {
+  list-style: outside none none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.attachments li {
+  display: inline-block;
+  margin-left: 5px;
+}
+
+textarea {
+  border: 1px solid #eeeeee;
+  border-radius: 6px 6px 0 0;
+  padding: 10px;
+  width: 100%;
+  border-bottom: 0;
+}
+
+form button {
+  border: medium none;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 3px 10px;
+}
+
+.attachments .fileContainer [type="file"] {
+  right: 6px;
+  top: -18px;
+  width: 20px;
+}
+
+.row-offcanvas {
+  position: relative;
+  -webkit-transition: all 0.25s ease-out;
+  -moz-transition: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
+}
+
+.row-offcanvas-left.active {
+  left: 33%;
+}
+
+.row-offcanvas-left.active .sidebar-offcanvas {
+  left: -33%;
+  position: absolute;
+  top: 0;
+  width: 33%;
+  margin-left: 5px;
+}
+
+#sidebar, #sidebar a, #sidebar-footer a {
+  padding-left: 3px;
+}
+
+/*
+ * off canvas sidebar
+ * --------------------------------------------------
+ */
+@media screen and (max-width: 768px) {
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
+  }
+
+  .row-offcanvas-left.active {
+    left: 33%;
+  }
+
+  .row-offcanvas-left.active .sidebar-offcanvas {
+    left: -33%;
+    position: absolute;
+    top: 0;
+    width: 33%;
+    margin-left: 5px;
+  }
+
+  #sidebar, #sidebar a, #sidebar-footer a {
+    padding-left:3px;
+  }
 }
