--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -58,98 +58,176 @@
 </div>-->
 
 
-
-            <div class="card gedf-card">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="mr-2">
-                                <img class="rounded-circle" width="45" [src]="profileSmImage" alt="User Profile">
-                            </div>
-                            <div class="ml-2">
-                                <div class="h5 m-0">
-                                    <a href="javascript:void(0);">
-                                        {{post.entityId}}
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="dropdown">
-                                <div class="btn-group">
-                                    <div ngbDropdown class="d-inline-block">
-                                        <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown"
-                                                aria-haspopup="true" aria-expanded="false" id="postRightDropdown" ngbDropdownToggle>
-                                            <i class="{{ icon }}"></i> {{ name }}
-                                            <i class="fa fa-ellipsis-h"></i>
-                                        </button>
-                                        <div ngbDropdownMenu aria-labelledby="postRightDropdown">
-                                            <button class="btn btn-outline-success" ngbDropdownItem (click)="save('Saved')"
-                                                    [ngClass]="{ 'active': savePost, 'in-active': !savePost}"><i
-                                                    class="fa fa-floppy-o" aria-hidden="true"></i> Save
-                                            </button>
-                                            <button class="btn btn-outline-warning" ngbDropdownItem (click)="hide('Hide')"
-                                                    [ngClass]="{ 'active': hidePost, 'in-active': !hidePost}"><i
-                                                    class="fa fa-eye-slash" aria-hidden="true"></i> Hide
-                                            </button>
-                                            <button class="btn btn-outline-danger" ngbDropdownItem (click)="report('Report')"
-                                                    [ngClass]="{ 'active': reportPost, 'in-active': !reportPost}"><i
-                                                    class="fa fa-exclamation-triangle" aria-hidden="true"></i> Report
-                                            </button>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+<div class="card gedf-card">
+    <div class="card-header">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="mr-2">
+                    <img class="rounded-circle" width="45" [src]="profileSmImage" alt="User Profile">
                 </div>
-                <div class="card-body">
-                    <div class="text-muted h7 mb-2">
-                        <i class="fa fa-clock-o"></i>
-                        published: {{post.createdDate | dateFormatPipe}}
-                    </div>
-
-                    <div *ngIf="post.containsImage" class="post-meta">
-                        <img [src]="postImage" alt="">
-                    </div>
-
-                    <div *ngIf="post.containsVideo" class="post-meta">
-                        <div class="we-video-info">
-
-                        </div>
-                    </div>
-                    <div *ngIf="post.containsText" class="description">
-                        <p class="card-text">
-                            {{post.postText}}
-                        </p>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <div class="row post-card-footer">
-                        <!--<div class="col">-->
-                        <a href="javascript:void(0);" class="col card-link post-footer-btn text-center" (click)="like($event)">
-                            <i class="fa fa-thumbs-up custom-size" aria-hidden="true"></i>
-                            Like
+                <div class="ml-2">
+                    <div class="h5 m-0">
+                        <a href="javascript:void(0);">
+                            {{post.entityId}}
                         </a>
-                        <!--</div>-->
-                        <!--<div class="col">-->
-                        <a href="javascript:void(0);" class="col card-link post-footer-btn text-center">
-                            <i class="fa fa-comment custom-size"></i>
-                            Comment
-                        </a>
-                        <!--</div>-->
-                        <!--<div class="col">-->
-                        <a href="javascript:void(0);" class="col card-link post-footer-btn text-center">
-                            <i class="fa fa-mail-forward custom-size"></i>
-                            Share
-                        </a>
-                        <!--</div>-->
                     </div>
                 </div>
             </div>
-            <br/>
+            <div>
+                <div class="dropdown">
+                    <div class="btn-group">
+                        <div ngbDropdown class="d-inline-block">
+                            <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false" id="postRightDropdown" ngbDropdownToggle>
+                                <i class="{{ icon }}"></i> {{ name }}
+                                <i class="fa fa-ellipsis-h"></i>
+                            </button>
+                            <!--<div ngbDropdownMenu aria-labelledby="postRightDropdown">
+                                <button class="btn btn-outline-success" ngbDropdownItem (click)="save('Saved')"
+                                        [ngClass]="{ 'active': savePost, 'in-active': !savePost}"><i
+                                        class="fa fa-floppy-o" aria-hidden="true"></i> Save
+                                </button>
+                                <button class="btn btn-outline-warning" ngbDropdownItem (click)="hide('Hide')"
+                                        [ngClass]="{ 'active': hidePost, 'in-active': !hidePost}"><i
+                                        class="fa fa-eye-slash" aria-hidden="true"></i> Hide
+                                </button>
+                                <button class="btn btn-outline-danger" ngbDropdownItem (click)="report('Report')"
+                                        [ngClass]="{ 'active': reportPost, 'in-active': !reportPost}"><i
+                                        class="fa fa-exclamation-triangle" aria-hidden="true"></i> Report
+                                </button>
+                            </div>-->
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="card-body">
+        <div class="text-muted h7 mb-2">
+            <i class="fa fa-clock-o"></i>
+            published: {{post.createdDate | dateFormatPipe}}
+        </div>
+
+        <div *ngIf="post.containsImage" class="post-meta">
+            <img [src]="postImage" alt="">
+        </div>
+
+        <div *ngIf="post.containsVideo" class="post-meta">
+            <div class="we-video-info">
+
+            </div>
+        </div>
+        <div *ngIf="post.containsText" class="description">
+            <p class="card-text">
+                {{post.postText}}
+            </p>
+        </div>
+    </div>
+    <div class="card-footer">
+        <div class="row post-card-footer">
+            <!--<div class="col">-->
+            <a href="javascript:void(0);" class="col card-link post-footer-btn text-center" (click)="like($event)">
+                <i class="fa fa-thumbs-up custom-size" aria-hidden="true"></i>
+                Like
+            </a>
+            <!--</div>-->
+            <!--<div class="col">-->
+            <a href="javascript:void(0);" class="col card-link post-footer-btn text-center" (click)="toggle()">
+                <i class="fa fa-comment custom-size"></i>
+                Comment
+            </a>
+            <!--</div>-->
+            <!--<div class="col">-->
+            <a href="javascript:void(0);" class="col card-link post-footer-btn text-center">
+                <i class="fa fa-mail-forward custom-size"></i>
+                Share
+            </a>
+            <!--</div>-->
+        </div>
+
+        <ng-container *ngIf="show">
+            <div class="row">
+                <div class="card gedf-card">
+                    <!--<div class="card-header">
+                        <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab"
+                                   aria-controls="posts" aria-selected="true">Make
+                                    a publication</a>
+                            </li>
+                        </ul>
+                    </div>-->
+                    <div class="card-body">
+                        <div class="tab-content" id="myTabContent">
+                            <div class="tab-pane fade show active" id="posts" role="tabpanel"
+                                 aria-labelledby="posts-tab">
+                                <div class="form-group">
+                                    <label class="sr-only" for="message">post</label>
+                                    <textarea class="form-control" id="message" rows="3"
+                                              placeholder=" Comment "></textarea>
+                                    <div class="attachments">
+                                        <ul>
+                                            <li>
+                                                <i class="fa fa-image"></i>
+                                                <label class="fileContainer">
+                                                    <input type="file" id="stageUploadedFile"
+                                                           (change)="onFileSelected($event)">
+                                                </label>
+                                            </li>
+                                            <li>
+                                                <i class="fa fa-video-camera"></i>
+                                                <label class="fileContainer">
+                                                    <input type="file">
+                                                </label>
+                                            </li>
+                                            <li>
+                                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                                <label class="fileContainer">
+                                                    <input type="checkbox" class="location" id="location">
+                                                </label>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="btn-toolbar justify-content-between float-right">
+                            <div class="btn-group">
+                                <button type="submit" class="btn btn-xs btn-primary" (click)="submitPost()">Post
+                                </button>
+                            </div>
+                            <!--<div class="btn-group">
+                                <div ngbDropdown class="d-inline-block">
+                                    <button class="btn btn-link dropdown-toggle" id="dropdownBasic1" ngbDropdownToggle>
+                                        <i class="{{ icon }}"></i> {{ name }}
+                                    </button>
+                                    <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                                        <button ngbDropdownItem (click)="Public('Public')"
+                                                [ngClass]="{ 'active': public, 'in-active': !public}"><i class="fa fa-globe"></i> Public
+                                        </button>
+                                        <button ngbDropdownItem (click)="Friends('Friends')"
+                                                [ngClass]="{ 'active': friends, 'in-active': !friends}"><i class="fa fa-users"></i>
+                                            Friends
+                                        </button>
+                                        <button ngbDropdownItem (click)="OnlyMe('Only Me')"
+                                                [ngClass]="{ 'active': onlyMe, 'in-active': !onlyMe}"><i class="fa fa-user"></i> Only Me
+                                        </button>
+                                    </div>
+                                </div>
+
+                            </div>-->
+                        </div>
+                    </div>
+                </div>
+                <br/>
+            </div>
+        </ng-container>
+    </div>
+</div>
+<br/>
 
 <!--        </ng-container>
     </cdk-virtual-scroll-viewport>
