--- a/src/app/components/user/user/user2.component.css
+++ b/src/app/components/user/user/user2.component.css
@@ -13,6 +13,47 @@ body {
     border-bottom: 4px solid #fff;
     box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.1);
 }
+.imagePreview {
+    width: 100%;
+    height: 180px;
+    background-position: center center;
+    background-color:#fff;
+    background-size: cover;
+    background-repeat:no-repeat;
+    display: inline-block;
+    box-shadow:0px -3px 6px 2px rgba(0,0,0,0.2);
+}
+
+.imgUp
+{
+    margin-bottom:15px;
+}
+.del
+{
+    position:absolute;
+    top:0px;
+    right:15px;
+    width:30px;
+    height:30px;
+    text-align:center;
+    line-height:30px;
+    background-color:rgba(255,255,255,0.6);
+    cursor:pointer;
+}
+.imgAdd
+{
+    width:30px;
+    height:30px;
+    border-radius:50%;
+    background-color:#4bd7ef;
+    color:#fff;
+    box-shadow:0px 0px 2px 1px rgba(0,0,0,0.2);
+    text-align:center;
+    line-height:30px;
+    margin-top:0px;
+    cursor:pointer;
+    font-size:15px;
+}
 
 li {
     list-style: none;
@@ -168,9 +209,16 @@ li {
     width: 100%;
     
 }
+input[type="file"] {
+    display: none;
+}
 .edit-photo{
-    position: absolute;
+    /*position: absolute;
     left: -20px;
+    z-index: 100;*/
+    position: absolute;
     z-index: 100;
+    left: 170px;
+    top: 355px;
 }
 /*Profile Pic End*/
