--- a/src/app/components/user/usertemplate/userofficetemplate/userofficetemplate.component.html
+++ b/src/app/components/user/usertemplate/userofficetemplate/userofficetemplate.component.html
@@ -43,7 +43,7 @@
       </div>
   </ng-template>
   <div *ngFor="let office of offices">
-    <app-useroffice [office]="office" [displayProperties]="displayProperties"></app-useroffice>
+    <app-useroffice [officeObj]="office" [displayProperties]="displayProperties"></app-useroffice>
     <!--  
     <table class="table">
           <tbody class="box-shadow">
