--- a/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
+++ b/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
@@ -92,7 +92,7 @@
         </div>
     </ng-template>
     <div *ngFor="let role of roles">
-      <app-userrole [role]="role" [displayProperties]="displayProperties"></app-userrole>
+      <app-userrole [roleObj]="role" [displayProperties]="displayProperties"></app-userrole>
       <!--  
       <table class="table">
             <tbody class="box-shadow">
