--- a/src/app/components/user/usertemplate/userbiodatatemplate/userbiodatatemplate.component.html
+++ b/src/app/components/user/usertemplate/userbiodatatemplate/userbiodatatemplate.component.html
@@ -71,11 +71,12 @@
         <label class="col-lg-3 col-form-label form-control-label">{{displayProperty.displayLabel}}</label>
 
         <div class="col-lg-9">
+          <label class="col-form-label form-control-label">{{biodata[displayProperty.propId]}}</label>
           <!--
             <input *ngIf="isProfileInEditMode" class="form-control" [formControlName]="displayProperty['propId']" type="text" value="{{biodata[displayProperty.propId]}}">
             <label *ngIf="!isProfileInEditMode" class="col-form-label form-control-label">{{biodata[displayProperty.propId]}}</label>
  -->
-          </div>
+          </div> 
 
     </div>
   </div>
