new post & comments changes added

--- a/src/app/components/post/newpost/newpost.component.html
+++ b/src/app/components/post/newpost/newpost.component.html
@@ -51,7 +51,7 @@
                 <div class="form-group">
                     <label class="sr-only" for="message">post</label>
                     <textarea class="form-control" id="message" rows="3"
-                              placeholder="What are you thinking?"></textarea>
+                              placeholder="What are you thinking?" [(ngModel)]='txtPost'></textarea>
                     <div class="attachments">
                         <ul>
                             <li>
