--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,9 +1,9 @@
-<app-newpost *ngIf="!disableNewPost"></app-newpost>
+<app-newpost (newpost)="PostNewEvent($event)" *ngIf="!disableNewPost"></app-newpost>
 
 
 <div class="card gedf-card">
     <cdk-virtual-scroll-viewport style="height: 550px" itemSize="90">
-        <app-postcard [post]=post *cdkVirtualFor="let post of posts">
+        <app-postcard  *ngFor="let post of posts" [post]="post">
         </app-postcard>
     </cdk-virtual-scroll-viewport>
 </div>
