--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -3,7 +3,7 @@
 
 <div class="card gedf-card">
     <cdk-virtual-scroll-viewport style="height: 550px" itemSize="90">
-        <app-postcard  *ngFor="let post of posts" [post]="post">
+        <app-postcard  *ngFor="let post of posts" [post]="post" [comments]="false">
         </app-postcard>
     </cdk-virtual-scroll-viewport>
 </div>
