--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -146,24 +146,18 @@
     </div>
     <div class="card-footer">
         <div class="row post-card-footer">
-            <!--<div class="col">-->
             <a href="javascript:void(0);" class="col card-link post-footer-btn text-center" (click)="like($event)">
                 <i class="fa fa-thumbs-up custom-size" aria-hidden="true"></i>
-                Like
+                Like({{post.likedBy.length}})
             </a>
-            <!--</div>-->
-            <!--<div class="col">-->
             <a href="javascript:void(0);" class="col card-link post-footer-btn text-center" (click)="toggleCommentInput()">
                 <i class="fa fa-comment custom-size"></i>
                 Comment
             </a>
-            <!--</div>-->
-            <!--<div class="col">-->
             <a href="javascript:void(0);" class="col card-link post-footer-btn text-center">
                 <i class="fa fa-mail-forward custom-size"></i>
                 Share
             </a>
-            <!--</div>-->
         </div>
 
 
@@ -314,7 +308,7 @@
         <div class="row post-card-footer">
             <a href="javascript:void(0);" class="col card-link post-footer-btn text-center" (click)="like($event)">
                 <i class="fa fa-thumbs-up custom-size" aria-hidden="true"></i>
-                Like
+                Like({{post.likedBy.length}})
             </a>
             <a href="javascript:void(0);" class="col card-link post-footer-btn text-center" (click)="toggleCommentInput()">
                 <i class="fa fa-comment custom-size"></i>
