tagging users implementation being added

--- a/src/app/components/post/postcard/postcard.component.css
+++ b/src/app/components/post/postcard/postcard.component.css
@@ -195,3 +195,10 @@ form button {
 .rounded-circle:hover{
   cursor: pointer;
 }
+.user{
+  color:#007bff;
+}
+.user:hover{
+  cursor: pointer;
+  text-decoration: underline;
+}
