--- a/src/app/components/post/newpost/newpost.component.html
+++ b/src/app/components/post/newpost/newpost.component.html
@@ -50,9 +50,28 @@
             <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
                 <div class="form-group">
                     <label class="sr-only" for="message">post</label>
-                    <textarea class="form-control" id="message" rows="3"
-                              placeholder="What are you thinking?" [(ngModel)]='txtPost'></textarea>
-                    <div class="attachments">
+                    <!-- <textarea class="form-control" id="message" rows="3"
+                              placeholder="What are you thinking?" [(ngModel)]='txtPost' [mention]="items" [mentionConfig]="{triggerChar:'@',maxItems:10,labelKey:'name'}"></textarea>
+                    -->
+                              <textarea class="form-control" id="message" rows="3"
+                              placeholder="What are you thinking?" [(ngModel)]='txtPost' 
+                              [mentionConfig]="mentionConfig" 
+                              [mentionListTemplate]="mentionListTemplate" (keypress)="getUsers($event)"
+                            ></textarea>
+
+
+                            <!-- <div #input contenteditable 
+                            style="height: 85px; padding: 16px;"
+                            [mention]="mentions" [mentionConfig]="mentionConfig" [mentionListTemplate]="mentionListTemplate">   
+                            Use "@" to mention items ..
+                        </div> -->
+
+                            <ng-template #mentionListTemplate let-item="item">
+                                <img class="mr-3" src="{{item.img}}" alt="" width="30" height="30">
+                                &nbsp;
+                                <span>{{item.name}}</span>
+                              </ng-template>
+                              <div class="attachments">
                         <ul>
                             <li>
                                 <i class="fa fa-image"></i>
